<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EduSys</string>
    <string name="app_name_a">教学课本</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_notification_demo">NotificationDemo</string>
    <string name="title_activity_des">DesActivity</string>
    <string name="hello">Hello World, MainTabActivity!</string>
    <string name="main_news">消息</string>
    <string name="main_home">首页</string>
    <string name="more">更多</string>
    <string name="main_manage_date">时间</string>
    <string name="main_friends">好友</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
