<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >

    <RelativeLayout
        android:id="@+id/rlhead"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#242424"
        android:gravity="center"
        android:padding="4dp" >
  
        <Button
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:text="" />
<!--   
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="主界面"
            android:textSize="20sp"
            android:textStyle="bold" /> -->

        <Button
            android:id="@+id/btnnext"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:text="Menu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlbody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlfoot"
        android:layout_below="@+id/rlhead"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:background="#bf8a30" >
<!-- 
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:scrollbars="none" > -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="500dip"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="0dip" >

                <WebView
                    android:id="@+id/webView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
      <!--   </ScrollView> -->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlfoot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#cb3837" >
<!-- 
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50px"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="4dp"
            android:height="70px"            
            android:text="底部信息"
            android:textSize="15sp"
            android:textStyle="bold" />
      -->


        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"           
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@id/radio_button0"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/home"
                android:text="@string/main_home" />

            <RadioButton
                android:id="@id/radio_button1"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/home"
                android:text="@string/main_news" />

            <RadioButton
                android:id="@id/radio_button2"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/home"
                android:text="@string/main_manage_date" />

            <RadioButton
                android:id="@id/radio_button3"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/home"
                android:text="@string/main_friends" />

            <RadioButton
                android:id="@id/radio_button4"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/home"
                android:text="@string/more" />
        </RadioGroup>
   </RelativeLayout>
</RelativeLayout>